# FT8CN

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ConfigFragment.java  bands.txt
app/src/main/cpp/: CMakeLists.txt  experimentalCodec.cpp  ft8Decoder.c  ft8Decoder.h  ft8Encoder.c  ft8Listener.cpp  ft8Spectrum.cpp  generate_ft8.cpp  monitor_opr.c  monitor_opr.h
app/src/main/cpp/experimental/: experimental_modem.c  experimental_modem.h
app/src/main/cpp/ft8/: decode.c  decode.h  encode.c  encode.h  pack.c  pack.h  unpack.c
app/src/main/java/com/bg7yoz/ft8cn/: FT8Common.java  Ft8Message.java  GeneralVariables.java  MainActivity.java  MainViewModel.java
app/src/main/java/com/bg7yoz/ft8cn/database/: DatabaseOpr.java
app/src/main/java/com/bg7yoz/ft8cn/experimental/: ExperimentalCodecBridge.java  ExperimentalCodecEngine.java
app/src/main/java/com/bg7yoz/ft8cn/ft8listener/: A91List.java  FT8SignalListener.java  OnFt8Listen.java  ReBuildSignal.java
app/src/main/res/layout/: fragment_config.xml  fragment_my_calling.xml
app/src/main/res/layout-land/: fragment_my_calling.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rMO/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
ft8cn/app/: build.gradle
(+34 files in other folders)
